app-with-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snoopy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snoopy
  template:
    metadata:
      labels:
        app: snoopy
    spec:
      containers:
      - name: snoopy 
        image: acrdevops.azurecr.io/emcconne/snoopy:v2
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: snoopy-srv
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: snoopy 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snoopy-ing 
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: snoopy.f1a583cbdcbd49719ed5.eastus.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: snoopy-srv
            port: 
              number: 80
